--- a/public/views/index.html
+++ b/public/views/index.html
@@ -11,33 +11,8 @@
     <form id="calculator">
 
       <!-- Number inputs -->
-      <input type="number" name="x" id="x">
-      <input type="number" name="y" id="y">
+      <input type="text" name="display" id="display">
 
-      <!-- Number buttons -->
-      <button type="button" value="0" class="number">0</button>
-      <button type="button" value="1" class="number">1</button>
-      <button type="button" value="2" class="number">2</button>
-      <button type="button" value="3" class="number">3</button>
-      <button type="button" value="4" class="number">4</button>
-      <button type="button" value="5" class="number">5</button>
-      <button type="button" value="6" class="number">6</button>
-      <button type="button" value="7" class="number">7</button>
-      <button type="button" value="8" class="number">8</button>
-      <button type="button" value="9" class="number">9</button>
-
-      <!-- Operation buttons -->
-      <button type="button" id="add" class="operation">+</button>
-      <button type="button" id="subtract" class="operation">-</button>
-      <button type="button" id="multiply" class="operation">*</button>
-      <button type="button" id="divide" class="operation">/</button>
-
-      <!-- Equals button -->
-      <button type="submit">=</button>
-
-      <!-- Clear button -->
-      <button type="reset">Clear</button>
-      
     </form>
     <div id="result"></div>
   </body>
